# thor_ros2

./: README.md
thor_description/: CMakeLists.txt  package.xml
thor_description/launch/: thor_view_description.launch.py
thor_description/rviz/: thor_view_description.rviz
thor_description/urdf/: thor.sdf  thor.urdf  thor_urdf.xacro
thor_gazebo/: CMakeLists.txt  package.xml
thor_gazebo/config/: ros_gz_bridge.yaml  thor_controllers.yaml
thor_gazebo/launch/: robot_spawn.launch.py  simple.launch.xml  start_world.launch.py  start_world_gzweb.launch.py  thor_bringup_gazebo.launch.py  thor_bringup_gazebo_rviz.launch.py
thor_gazebo/urdf/: classic_gazebo.xacro  thor_classic_gazebo.xacro  thor_ros2_control.xacro  thor_urdf.xacro
thor_gazebo/worlds/: empty.world  house.world  simple.world
thor_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
thor_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  thor.ros2_control.xacro  thor.srdf  thor.urdf.xacro
thor_moveit_config/launch/: move_group.launch.py
thor_moveit_config/rviz/: move_group.rviz
thor_ros2/: CMakeLists.txt  README.md  package.xml
